restyled links to be visible, changed scroll behaviour so content cannot overflow the a4 page, fixed some issues with project links

--- a/index.css
+++ b/index.css
@@ -18,3 +18,10 @@ html {
   width: 210mm;
   height: 297mm;
 }
+a {
+  color: #0000EE;
+  text-decoration: underline;
+  text-underline-offset: 2px;
+  text-decoration-thickness: 1px;
+  text-decoration-color: #0000EE;
+}
